2005-04-19  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sugar.m4 (m4_bpatsubsts): Add the b- to comment, too.

2005-04-19  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/autoconf/general.m4 (_AC_INIT_PARSE_ARGS): Handle --docdir.
	Report from Horst Wente.

2005-04-15  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (_AC_ARG_VAR_VALIDATE): Fixed a typo in
	  the comment.

2005-04-14  Gregorio Guidi  <greg_g@gentoo.org>

	* doc/autoconf.texi (External Software, Package Options): Add
	  examples showing how to implement --with-* and --enable-* options.

2005-04-13  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/status.m4 (_AC_OUTPUT_SUBDIRS): Look for configure.ac
	as well as configure.in.  Problem reported by Gregorio Guidi.

2005-04-10  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Particular Functions): Use gnulib's current
	pattern for alloca snippet.

2005-04-04  Stepan Kasal  <kasal@ucw.cz>

	* lib/autotest/general.m4 (_AT_DECIDE_TRACEABLE): Fix a typo.

2005-04-01  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Generic Programs): Fix a typo.

2005-04-01  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autotest/general.m4 (AT_INIT): Don't assume that "date +%s"
	fails if %s isn't supported.  Problem reported by Ralf Wildenhues.

2005-03-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/fortran.m4 (_AC_FC_LIBRARY_LDFLAGS):
	Merge `-z option' as well for the benefit of Solaris link flags.  Pass
	whole-archive (-zallextract, -zdefaultextract) options in the hope of
	unique libraries, for the Sun Fortran 95 8.0 compiler.  Bug reported
	against Libtool by Yury Puhalsky <pooh@cryptopro.ru>.

2005-03-22  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: The configure command now warns you if you attempt to use
	a directory whose name contains a special character like space,
	newline, or "\".
	* doc/autoconf.texi (Installation Directory Variables): Allow
	"," in file names.  Do not use \@; it's not a portable regexp.