@@ -1,3 +1,13 @@
+2005-04-19  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* lib/autoconf/general.m4 (_AC_INIT_PREPARE, _AC_RUN_IFELSE):
+	Remove core.conftest.* too; it's generated by Tru64 5.1.
+	Problem reported by Jennis Pruett.
+	* lib/autoconf/functions.m4
+	(AC_FUNC_SETVBUF_REVERSED, AC_FUNC_UTIME_NULL):
+	Don't bother to remove core files; AC_RUN_IFELSE should do that
+	for you.
+
 2005-04-19  Stepan Kasal  <kasal@ucw.cz>
 
 	* lib/m4sugar/m4sugar.m4 (m4_bpatsubsts): Add the b- to comment, too.
